<resources>
    <string name="app_name" translatable="false">IBD Helper</string>
    <string name="activity_main_day_txt_meal">Meal</string>
    <string name="activity_main_day_txt_toilet">Bowel motion</string>
    <string name="activity_main_day_txt_pain">Pain</string>
    <string name="activity_main_group_day_monday">Monday</string>
    <string name="activity_main_group_day_tuesday">Tuesday</string>
    <string name="activity_main_group_day_wednesday">Wednesday</string>
    <string name="activity_main_group_day_thursday">Thursday</string>
    <string name="activity_main_group_day_friday">Friday</string>
    <string name="activity_main_group_day_sunday">Sunday</string>
    <string name="activity_main_group_day_saturday">Saturday</string>
    <string name="title_activity_pain">Pain</string>
    <string name="activity_pain_icon_description">Abdominal pain icon.</string>
    <string name="painType_sting">Spot</string>
    <string name="painType_cramp">Cramp</string>
    <string name="painType_burn">Burn</string>
    <string name="painType_pinch">Pinch</string>
    <string name="painType_twinge">Twinge</string>
    <string name="timeOfDay_morning">Morning</string>
    <string name="timeOfDay_midday">Midday</string>
    <string name="timeOfDay_afternoon">Afternoon</string>
    <string name="timeOfDay_evening">Evening</string>
    <string name="timeOfDay_midnight">Midnight</string>
    <string name="activity_pain_intensity_tag">Intensity</string>
    <string name="activity_pain_type_tag">Type</string>
    <string name="activity_pain_location_tag">Location</string>
    <string name="activity_pain_card_btn_delete_txt">Delete</string>
    <string name="activity_pain_card_btn_save_txt">Save</string>
    <string name="activity_pain_card_btn_edit_txt">Edit</string>
    <string name="title_activity_about" translatable="false">@string/app_name</string>
    <string name="activity_about_btn_rate">Rate</string>
    <string name="activity_about_btn_close">Close</string>
    <string name="activity_about_txt_version_tag">Version</string>
    <string name="activity_about_txt_author_tag">Developed by</string>
    <string name="activity_about_txt_author" translatable="false">Nicolas Signori</string>
    <string name="activity_about_txt_version" translatable="false">v 0.1.0</string>
    <string name="activity_about_txt_contact_tag">Contact</string>
    <string name="activity_about_txt_contact" translatable="false">IBDHelper@nsignori.ca</string>
    <string name="activity_about_description">Une petite description décrivant les principales fonctions de l\'application et ce pourquoi elle à été développée.</string>
    <string name="activity_bowel_motion_tag_consistency">Conistency</string>
    <string name="activity_bowel_motion_tag_color">Color</string>
    <string name="activity_bowel_motion_tag_blood_presence">Presence of blood</string>
    <string name="activity_bowel_motion_tag_quantity">Quantity</string>
    <string name="activity_bowel_motion_tag_importance">Importance</string>
    <string name="activity_bowel_motion_tag_blood">Blood</string>
    <string name="activity_bowel_motion_tag_mucus">Mucus</string>
    <string name="activity_bowel_motion_btn_add_element">Add element</string>
    <string name="activity_bowel_motion_icon_description">Toilet</string>
    <string name="title_activity_bowel_motion">Bowel Motion</string>
    <string name="activity_pain_delete_undo">UNDO</string>
    <string name="activity_pain_delete_confirm">Deleted</string>
    <string name="activity_main_mnu_about">About</string>
</resources>
