<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme='@style/Theme.AppCompat.Dialog.Alert'
    tools:context="p55.a2017.bdeb.qc.ca.ibdhelper.ActivityAbout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/activity_about_txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_about_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="18dp">

            <TextView
                android:id="@+id/activity_about_version_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/activity_about_txt_version_tag" />

            <TextView
                android:id="@+id/activity_about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/activity_about_txt_version"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/activity_about_author_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/activity_about_txt_author_tag" />

            <TextView
                android:id="@+id/activity_about_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/activity_about_txt_author"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/activity_about_contact_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/activity_about_txt_contact_tag" />

            <TextView
                android:id="@+id/activity_about_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autoLink="email"
                android:linksClickable="true"
                android:text="@string/activity_about_txt_contact"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="#4B4E50"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_about_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:text="@string/activity_about_btn_rate"
                android:visibility="visible" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="#4B4E50"/>

            <Button
                android:id="@+id/activity_about_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:text="@string/activity_about_btn_close" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
