<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="p55.a2017.bdeb.qc.ca.ibdhelper.BowelMotion.FragmentBowelMotionCardInfo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner_background"
        android:elevation="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/activity_bowel_motion_info_txt_dayTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Midday"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/activity_bowel_motion_info_txt_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12h00"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/activity_bowel_motion_tag_consistency"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/activity_bowel_motion_txt_consistency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Liquid" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/activity_bowel_motion_tag_color"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/activity_bowel_motion_txt_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Brown" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/activity_bowel_motion_tag_blood_presence"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/activity_bowel_motion_txt_blood_presence"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="No" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/activity_bowel_motion_tag_quantity"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/activity_bowel_motion_txt_quantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/activity_bowel_motion_tag_importance"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/activity_bowel_motion_txt_importance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Urgent" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:src="@color/backgroundColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/activity_bowel_motion_info_btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/activity_pain_card_btn_delete_txt" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:src="@color/backgroundColor" />

                <Button
                    android:id="@+id/activity_bowel_motion_info_btn_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:paddingEnd="8dp"
                    android:text="@string/activity_pain_card_btn_edit_txt" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
