<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_day"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/activity_main_day_imgbtn_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_main_day_imgbtn_toilet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/plate_with_fork_and_knife_black" />

    <ImageButton
        android:id="@+id/activity_main_day_imgbtn_pain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/activity_main_day_imgbtn_toilet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/stomach_ache_black" />

    <ImageButton
        android:id="@+id/activity_main_day_imgbtn_toilet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/toilet_black" />

    <TextView
        android:id="@+id/activity_main_day_txt_pain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/activity_main_day_txt_pain"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_day_imgbtn_pain"
        app:layout_constraintRight_toRightOf="@+id/activity_main_day_imgbtn_pain"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_day_imgbtn_pain" />

    <TextView
        android:id="@+id/activity_main_day_txt_toilet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/activity_main_day_txt_toilet"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_day_imgbtn_toilet"
        app:layout_constraintRight_toRightOf="@+id/activity_main_day_imgbtn_toilet"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_day_imgbtn_toilet" />

    <TextView
        android:id="@+id/activity_main_day_txt_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/activity_main_day_txt_meal"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_day_imgbtn_meal"
        app:layout_constraintRight_toRightOf="@+id/activity_main_day_imgbtn_meal"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_day_imgbtn_meal" />

</android.support.constraint.ConstraintLayout>