<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="p55.a2017.bdeb.qc.ca.ibdhelper.ActivityPainInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_pain_intensity_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/activity_pain_intensity_tag"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/activity_pain_intensity_skb"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:max="10"
                android:progress="5"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/activity_pain_type_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/activity_pain_type_tag"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/activity_pain_type_spn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/activity_pain_painType" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_pain_location_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/activity_pain_location_tag"
                    android:textSize="14sp" />

                <ImageButton
                    android:id="@+id/activity_pain_location_ibtn_edit"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_weight="0"
                    android:src="@drawable/ic_brush_black_24dp" />

                <ImageButton
                    android:id="@+id/activity_pain_location_ibtn_erase"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_weight="0"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_eraser" />

                <ImageButton
                    android:id="@+id/activity_pain_location_ibtn_delete"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_weight="0"
                    android:src="@drawable/ic_delete_black_24dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <ImageView
                    android:id="@+id/activity_pain_location_img_schema"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/abdomen" />

                <ImageView
                    android:id="@+id/activity_pain_location_img_board"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/border" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
